--- a/style.css
+++ b/style.css
@@ -4,5 +4,11 @@ h1{
 	justify-content: center;
 	font-weight: 2000;
 	color: red;
+	text-decoration: underline ;
+}
+
+h2 {
+	display: flex;
+	justify-content: center;
 	text-decoration: overline;
-};
+}
